refactor: rename project to riderless
